# ScientificCpp

./: .gitignore  README  README.md
code/: CMakeLists.txt
code/0_basics/lectures/: CMakeLists.txt  complete_example.cpp  force_calc.cpp  force_calc_const.cpp  rect_info.cpp
code/0_basics/solutions/: CMakeLists.txt
code/1_control_structure/lectures/: dispense_drink.cpp  factorial.cpp  grav_force.cpp  tea_father.cpp
code/1_control_structure/solutions/: CMakeLists.txt  fractal_forest.cpp  pi.cpp  pong.cpp  sierpinsky.plt
code/2_more_data_types/exercises/: CMakeLists.txt
code/2_more_data_types/lectures/: CMakeLists.txt  centre_of_mass.cpp  pointers_example.cpp
code/2_more_data_types/solutions/: CMakeLists.txt  game_of_life.cpp  lottery.cpp
code/3_io/lectures/: parse_numbers.cpp
code/3_oop/solutions/: CMakeLists.txt  bouncy_balls.cpp
code/4_io/exercises/: CMakeLists.txt
code/4_io/solutions/: CMakeLists.txt  gol_with_io.cpp
code/4_oop/solutions/: CMakeLists.txt
code/5_advanced_oop/exercises/: CMakeLists.txt
code/5_advanced_oop/exercises/snake/: GameObjects.cpp  snake_game.cpp
code/5_advanced_oop/lectures/: CMakeLists.txt  inheritance.cpp  inheritance2.cpp
code/5_advanced_oop/solutions/: CMakeLists.txt  Game.cpp  Game.h  World.cpp  World.h  snake.cpp  snake.h  snake_game.cpp  snake_game.h
code/5_advanced_oop/solutions/snake/: Draw.cpp  Draw.h  Game.cpp  GameObjects.cpp  World.cpp  snake  snake.cpp  snake_game.cpp  snake_game.h
lectures/: 0_basics.tex  1_control_structure.tex  2_more_data_types.tex  3_io.tex  3_oop.tex  4_io.tex  4_oop.tex  (+2 more)
