
cmake_minimum_required(VERSION 2.6)

set_property(TARGET PROPERTY PROJECT_LABEL "Scientific Cpp")

#add_subdirectory(0_basics/exercises)
add_subdirectory(0_basics/lectures)
add_subdirectory(0_basics/solutions)
add_subdirectory(1_control_structure/exercises)
add_subdirectory(1_control_structure/lectures)
add_subdirectory(1_control_structure/solutions)
add_subdirectory(2_more_data_types/lectures)
add_subdirectory(2_more_data_types/solutions)
add_subdirectory(3_io/lectures)
add_subdirectory(3_io/solutions)
add_subdirectory(4_oop/lectures)
add_subdirectory(4_oop/solutions)